force-app/main/default/objects/ZipCode_Log__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <description>Name of the country the ZipCode is pointing to.</description>
        <inlineHelpText>Normalized name of the country.</inlineHelpText>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_Name__c</fullName>
        <description>Name of the place/neighbour/county the ZipCode points to.</description>
        <inlineHelpText>Normalized Place Name.</inlineHelpText>
        <label>Place Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Inner country&apos;s state name the ZipCode points to.</description>
        <inlineHelpText>Normalized name of the state.</inlineHelpText>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <description>Text ZipCode, set 18 chars to enagle loger future codes (currently the longest is 18 chars).</description>
        <inlineHelpText>ZipCode looked for. Expecting Alphanumeric characters.</inlineHelpText>
        <label>ZipCode</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>ZipCode Log</label>
    <nameField>
        <displayFormat>ZCL-{000000}</displayFormat>
        <label>ZipCode Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZipCode Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>